# scrapbox3

./: .gitignore  README.md
algo_sample/: README.md
algo_sample/dp_edit_distance/: edit_distance.cpp
cpp_sample/: README.md
cpp_sample/eigen_function_method_check/: README.md  main.cpp
cpp_sample/eigen_tutorial/: README.md  sample001.cpp  sample002.cpp  sample003.cpp
cpp_sample/include_header_file/: README.md  main.cpp  sample.cpp  sample.hpp
ds_sample/: README.md
ir_sample/: README.md
ir_sample/es_sudachi/: README.md  (+5 more)
java_sample/: README.md
js_sample/: README.md
kt_sample/: README.md
ml_sample/: README.md
nlp_sample/: README.md
py_sample/: README.md
py_sample/fastapi_error_handling/: README.md  pyproject.toml
py_sample/fastapi_error_handling/src/: app.py  calculator.py
py_sample/fastapi_error_handling/src/models/: __init__.py  result.py  variables.py
py_sample/fastapi_error_handling/tests/: conftest.py  test_app.py  test_calculator.py
rec_sample/: README.md
rec_sample/binary_rating_logistic/: README.md  pyproject.toml
rec_sample/binary_rating_logistic/binary_rating_logistic/: main.py
rec_sample/binary_rating_logistic/data/: data.csv
rec_sample/binary_rating_logistic/tests/: test_binary_rating_logistic.py
rec_sample/gaussian_process_regressor_numeric_rating/: README.md  pyproject.toml
rec_sample/gaussian_process_regressor_numeric_rating/gaussian_process_regressor_numeric_rating/: main.py
rec_sample/gaussian_process_regressor_numeric_rating/tests/: test_gaussian_process_regressor_numeric_rating.py
stats_sample/: README.md
(+514 files in other folders)
