[tool.poetry]
name = "binary_rating_logistic"
version = "0.1.0"
description = ""
authors = ["wararaki <ky7.ott.w@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.1"
scikit-learn = "^0.23.1"
pandas = "^1.0.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
